src/css/variables/docsStyle.less
@import './fontStyle.less';

@color-primary: #12c3f4;
@color-list-blue: #4fc4f9;
@pre-bg-color: #f9f9f9;
@pre-bg-color-dark: #242a35;
@code-bg-color: #eee;
@note-bg-color: #f0f4f9;
@caution-bg-color: rgba(242, 92, 5, 0.1);
@warning-bg-color: #fce8e5;
@faq-disc-color: #06aff2;
@link-color: #1493cc;
@color-caution: #f25c05;
@color-warning: #d51f00;
@main-text-color: #191919;

.articleContent,
.doc-post-container {
  color: @main-text-color;

  details {
    margin-bottom: 24px;
  }

  a,
  p,
  li,
  .alert,
  .note,
  .info,
  .warning,
  table,
  tr,
  td,
  th,
  h1,
  h2,
  h3,
  h4 {
    .fontSwitch();
  }

  h1,
  h2,
  h3 {
    .fontMedi();
  }

  h1 {
    font-size: 36px;
    line-height: 40px;
    margin-bottom: 24px;
    margin-top: 32px;

    @media @tablet {
      margin-top: 0px;
    }
  }

  h2 {
    font-size: 24px;
    line-height: 32px;
    margin-bottom: 16px;
    margin-top: 32px;
  }

  h3 {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 8px;
    margin-top: 24px;
  }

  h4 {
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 8px;
    margin-top: 16px;
    font-weight: 700;
  }

  p {
    font-size: 16px;
    line-height: 1.4em;
    margin-bottom: 8px;

    @media @tablet {
      font-size: 14px;
      line-height: 24px;
      margin-bottom: 8px;
      // margin-top: 8px;
    }
  }

  img {
    width: 90%;
    margin: 32px auto;
    display: block;

    @media @tablet {
      margin: 24px auto;
    }
  }

  code {
    font-size: 14px;
    line-height: 1.4rem;
    font-family: 'Source Code Pro' !important;
    background-color: @code-bg-color;
    border: 1px solid #e2e2e2;
    border-radius: 4px;
    padding: 0px 8px;
    color: @color-doc-primary;
    display: inline-block;
    font-weight: 600;

    @media @phone {
      max-width: calc(100vw - 32px);
      overflow-x: auto;
    }
  }

  pre {
    border-radius: 4px;
    background-color: rgb(246, 246, 246);

    margin: 24px 0;
    position: relative;
    &::-webkit-scrollbar-track {
      width: 12px;
    }

    code {
      color: #454545;
      display: block;
      font-size: 13px;
      line-height: 20px;
      font-family: 'Source Code Pro' !important;
      border: none;
      padding: 12px;
      background-color: transparent;
      font-weight: 400;
      overflow: auto;
      margin: 12px 32px 12px 12px;
    }
  }

  a {
    font-size: 16px;
    color: @link-color;

    &.icon-wrapper {
      width: 20px;
      height: 20px;
      display: inline-block;
      font-size: 0;
      vertical-align: middle;
    }
  }

  li {
    //styleName: Body/Body2.Small;
    font-size: 16px;
    line-height: 1.4em;
    text-align: left;
    color: #000;
    position: relative;
    margin-bottom: 4px;

    & > ul {
      list-style-type: circle;
    }
  }

  ul {
    list-style-type: disc;
    margin: 8px 0;
    padding-left: 24px;

    & > li::marker {
      font-size: 16px;
      display: inline-block;
      margin-right: 16px;
    }
  }

  ol {
    list-style: decimal;
    padding-left: 24px;
    margin: 8px 0;

    & > li::marker {
      font-size: 16px;
      line-height: 1.4em;
      margin-right: 8px;
    }
  }

  // External link image
  img[src^='http'] {
    width: 100%;
    height: auto;
  }

  .alert {
    padding: 40px 21px 14px 21px;
    margin: 36px 0;
    font-size: 16px;
    line-height: 24px;
    position: relative;
    font-weight: 500;

    @media @tablet {
      margin-bottom: 16px;
    }

    &.warning {
      background-color: @warning-bg-color;
      border-left: 2px solid @color-warning;
      border-radius: 4px;

      &::before {
        position: absolute;
        content: 'WARNING';
        line-height: 20px;
        color: @color-warning;
        left: 21px;
        top: 12px;
        font-weight: 600;
      }
    }

    &.caution {
      background-color: @caution-bg-color;
      border-left: 2px solid @color-caution;
      border-radius: 4px;

      &::before {
        position: absolute;
        content: 'CAUTION';
        line-height: 20px;
        color: @color-caution;
        left: 21px;
        top: 12px;
        font-weight: 600;
      }
    }

    &.note {
      background-color: @note-bg-color;
      border-left: 2px solid @link-color;
      border-radius: 4px;

      &::before {
        color: @link-color;
        position: absolute;
        content: 'NOTE';
        line-height: 20px;
        left: 21px;
        top: 12px;
        font-weight: 600;
      }
    }

    &.info {
      background-color: @note-bg-color;
      border-left: 2px solid @color-list-blue;
      border-radius: 4px;

      &::before {
        position: absolute;
        content: 'INFO';
        line-height: 20px;
        left: 21px;
        top: 12px;
        font-weight: 600;
        color: @color-list-blue;
      }
    }

    &.survey {
      background-color: @warning-bg-color;
      border-left: 2px solid @color-warning;
      border-radius: 4px;
      display: block;

      &::before {
        position: absolute;
        content: 'Milvus 2021 survey!';
        line-height: 20px;
        left: 21px;
        top: 12px;
        font-weight: 600;
        color: @color-warning;
      }
    }

    &.quote {
      background-color: #f6f6f6;
      border-left: 2px solid #82838e;
      border-radius: 4px;

      &::before {
        position: absolute;
        content: 'QUOTE';
        line-height: 20px;
        left: 21px;
        top: 12px;
        font-weight: 600;
        color: #82838e;
      }
    }
  }

  .admonition {
    font-size: 16px;
    line-height: 17px;
    margin-bottom: 24px;

    @media @tablet {
      margin-bottom: 16px;
    }

    &.danger {
      background-color: @warning-bg-color;
      padding: 14px 21px;
      border-left: 2px solid @color-warning;
      border-radius: 4px;

      .admonition-title {
        color: @color-warning;
        padding: 0;
        font-weight: 600;
        margin-bottom: 8px;
      }
    }

    &.note {
      background-color: @note-bg-color;
      padding: 14px 21px;
      border-left: 2px solid @link-color;
      border-radius: 4px;

      .admonition-title {
        padding: 0;
        font-weight: 600;
        margin-bottom: 8px;
        color: @link-color;
      }
    }
  }

  table {
    margin-bottom: 24px;
    background-color: @pre-bg-color;
    overflow-x: auto;
    width: 100%;
    border-radius: 4px;
    display: block;
    hyphens: none;

    @media @tablet {
      margin: 16px 0;
    }

    thead {
      padding: 12px;
      border-bottom: 1px solid #eee;
      font-size: 12px;
      line-height: 22px;
      text-align: left;
      background-color: #e8e8e8;
      min-width: 100%;
      width: calc(100vw - 32px);

      th {
        text-align: left;
      }
    }

    tbody {
      font-size: 14px;
      line-height: 1.4em;
      text-align: left;
      padding: 12px;

      @media @tablet {
        font-size: 14px;
      }

      tr {
        border-bottom: 1px solid #eee;

        &:hover {
          background-color: #e8e8e8;
        }
      }

      td {
        padding: 12px;
        text-align: left;
        font-size: 16px;
        line-height: 1.4em;
        width: calc(100vw - 32px);
        vertical-align: text-top;

        @media @tablet {
          font-size: 14px;

          code {
            font-size: 14px;
          }
        }
      }
    }

    th {
      font-size: 12px;
      line-height: 22px;
      padding: 12px;
      font-weight: 600;
    }

    th,
    td {
      &.width10 {
        width: 10%;
      }

      &.width20 {
        width: 20%;
      }

      &.width30 {
        width: 30%;
      }

      &.width40 {
        width: 40%;
      }

      &.width50 {
        width: 50%;
      }

      &.width60 {
        width: 60%;
      }

      &.width70 {
        width: 70%;
      }

      &.width80 {
        width: 80%;
      }

      &.width90 {
        width: 90%;
      }

      * {
        hyphens: none;
      }
    }

    b {
      font-weight: 400;
    }

    li,
    summary {
      margin: 0;
    }

    details {
      margin-bottom: 24px;
    }
  }

  .filter,
  .tab-wrapper {
    padding: 8px 0;
    margin-bottom: 8px;

    a {
      padding: 6px 40px;
      color: #000000;
      display: inline-block;
      line-height: 1.4em;

      @media @tablet {
        padding: 6px 8px;
      }
    }
  }

  .filter {
    a {
      border-radius: 4px;
      color: #000000;
    }

    & .active {
      background-color: @color-primary;
      color: #fff;
    }
  }

  .tab-wrapper {
    & .active {
      border-bottom: 2px solid @color-primary;
      color: @color-primary;
    }
  }

  .filter-CPU {
    ul,
    ol {
      list-style: none;
    }
  }
}

details {
  font-size: 16px;
  line-height: 1.4em;
  margin: 8px 0;

  @media @tablet {
    margin: 16px 0;
    font-size: 14px;
  }

  summary {
    cursor: pointer;

    color: @link-color;
    margin-bottom: 8px;

    &::marker {
      color: @pre-bg-color-dark;
      font-size: 0.8em;
    }
  }
}

.hljs-meta {
  user-select: none;
}

blockquote {
  border-left: 0.2rem solid @color-gray;
  padding: 0 0.8rem;
  margin: 0.8rem 0;
}

em,
i {
  font-style: italic;
}

.multipleCode {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 20px 20px -20px 20px;
  overflow-x: auto;

  a {
    font-weight: 600;
    display: inline-block;
    cursor: pointer;
    user-select: none;
    border-radius: 0px;
    text-transform: uppercase;
    position: relative;
    font-size: 14px;
    line-height: 17px;
    cursor: pointer;
    padding: 4px 0;
    color: #454545;

    & + a {
      margin-left: 24px;
    }

    &.active {
      color: @color-primary;
      background-color: #fff;

      &::after {
        content: '';
        display: inline-block;
        position: absolute;
        width: 26px;
        height: 1px;
        background-color: @color-primary;
        bottom: 0;
        left: 50%;
        transform: translateX(-50%);
      }
    }
  }
}

.result-bock {
  padding: 16px;
  background-color: #f6f6f6;
  border-radius: 4px;
  font-size: 14px;
}

.gatsby-resp-image-wrapper {
  min-width: 22px;
  height: auto;
  width: 90%;

  @media @tablet {
    margin: 24px auto;
  }
}

// pre {
//   margin-bottom: 0;

//   & + pre {
//     margin-top: 16px;
//   }
// }

